@@ -215,3 +215,6 @@ shady-skin Revision History
 
 2016-02-12:
 - Changed {epgname} to {name} in menurecordings
+
+2016-02-14:
+- Adapted skinpreview
